<resources>
    <string name="app_name">Ngerisep</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_wish">Wishlist</string>
    <string name="title_profil">Profile</string>
    <string name="populer_recipe">Dessert Recipes</string>
    <string name="category_label">Category</string>
    <string name="fafvorite_label">Seafood Recipes</string>
    <string name="recipes_text">Recipes</string>
    <string name="ingredients_text">Ingredients</string>
    <string name="instruction_text">Instructions</string>
    <string name="watch_text">Watch Tutorial</string>
    <string name="mark_text">Mark</string>
    <string name="search_hint">Mo cari resep apa nich ?</string>
    <string name="misscellaneous_text">Miscellaneous Recipes</string>
    <string name="empty_text">Aww kamu belum menambahkan resep\n ayo temukan resep favorite dan mulai memasak</string>
    <string name="dummy_name">Your Name</string>
    <string name="dummy_passion">Your Passion</string>
    <string name="settings_text">Settings</string>
    <string name="your_name_text">Your Name</string>
    <string name="your_passion_text">Your Passion</string>
    <string name="notif_text">Notifications</string>
    <string name="about_text">Developer</string>
</resources>
