<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.grepi.ngerisep.view.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.grepi.ngerisep.view.ui.wishlist.MarkFragment"
        android:label="@string/title_wish"
        tools:layout="@layout/fragment_mark" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.grepi.ngerisep.view.ui.profile.ProfileFragment"
        android:label="@string/title_profil"
        tools:layout="@layout/fragment_profil" />
</navigation>
