<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile_fragment"
    tools:context=".view.ui.profile.ProfileFragment">

    <com.github.florent37.shapeofview.shapes.CircleView
        android:id="@+id/circleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintCircleRadius="30dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_mini_propill" />
    </com.github.florent37.shapeofview.shapes.CircleView>

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/dummy_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/circleView"
        app:layout_constraintTop_toTopOf="@+id/circleView" />

    <TextView
        android:id="@+id/profile_passion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dummy_passion"
        android:textSize="14sp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/circleView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/profile_name"
        app:layout_constraintTop_toBottomOf="@+id/profile_name" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="130dp" />

    <Button
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/edit_button"
        android:background="@drawable/bg_circle"
        android:drawableStart="@drawable/ic_edit"
        android:textAllCaps="false"
        android:padding="5dp"
        android:layout_marginEnd="50dp"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@+id/circleView"
        app:layout_constraintEnd_toStartOf="@+id/profile_name"
        app:layout_constraintStart_toEndOf="@+id/circleView" />

</androidx.constraintlayout.widget.ConstraintLayout>